<resources>
    <string name="app_name">What? Calendar</string>
    <string name="app_permission_request">Permission?</string>
    <string name="gatt_service_name">What? Calendar</string>
    <string name="gatt_service_description">What? Calendar Service</string>
    <string name="gatt_service_running_notification">What? Calendar Service is running</string>
    <string name="activity_calendars_hint">All calendars from your mobile device\nare shown as on by default</string>
    <string name="activity_title_calendars">SELECT CALENDARS</string>
    <string name="activity_title_information">INFORMATION</string>
    <string name="activity_title_my_watch">MY WATCH</string>
    <string name="add_calendars_hint">Add calendars</string>
    <string name="agree">AGREE</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bluetooth_connection_alert">Activate the Bluetooth on your phone.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_my_calendars">MY CALENDARS</string>
    <string name="button_pair_watch">PAIR WATCH</string>
    <string name="calibration">Calibrate your watch</string>
    <string name="calibration_text">Enter the current position of the hands on your watch</string>
    <string name="close">CLOSE</string>
    <string name="confirm_message_account_logout">You really want to logout from this account?</string>
    <string name="connect_your_watch">CONNECT YOUR WATCH</string>
    <string name="connect_your_watch_press">Now press pair your watch…</string>
    <string name="connect_your_watch_text">Now we are ready to connect your Watch. Ensure that the watch is laying flat next to your mobile phone. Activate Bluetooth on your phone [Bluetooth settings], and triple tap the watch, you will be rewarded with 3 flashes.</string>
    <string name="connect_your_watch_text_second">Please try again and push the pair button. If this didn’t help, please email the Serial Number of your watch to support@whatwatch.com. In return you will get the MAC address for your Calendar Watch. Please enter this below and push the pair button.</string>
    <string name="content_description_account_logo">Account logo</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dialog_msg_airplane">Selecting Flight Mode will deactivate Bluetooth on your watch, and disconnect it from your phone.\nTo turn Bluetooth back on, simply triple tap the watch face. Activate flight mode?</string>
    <string name="dialog_msg_forget_watch">Are you sure you want to unpair your Calendar Watch?</string>
    <string name="dialog_msg_location">Location service is off, please enable it to find the near BLE devices.</string>
    <string name="dialog_msg_low_battery">The battery level should be above 70% to proceed with upgrade.</string>
    <string name="dialog_msg_reset_watch">Pushing the reset button will remove all information from your watch.\nPlease connect in the usual way to re-add your calendar data to the watch. Reset?</string>
    <string name="dialog_msg_update_can_be">New version of the watch firmware is available. Would you like to update it now?</string>
    <string name="dialog_msg_update_done">Your watch has been updated successfully</string>
    <string name="dialog_msg_update_error">An error occurred during the upgrade process. Please contact customer support.</string>
    <string name="dialog_msg_update_no">No firmware update available</string>
    <string name="dialog_msg_update_progress">The update is in progress…</string>
    <string name="dialog_title_attention">Attention</string>
    <string name="dialog_title_set_start_hour">Set start hour</string>
    <string name="disconnected_text">Not\nconnected</string>
    <string name="error">Error!</string>
    <string name="error_email_must_not_be_empty">Email must not be empty</string>
    <string name="error_google_auth">Google authorization error</string>
    <string name="error_hint">Something went wrong. Please try again!</string>
    <string name="error_no_bt_hint">Turn on Bluetooth to allow app to connect to your watch</string>
    <string name="error_password_must_not_be_empty">Password must not be empty</string>
    <string name="error_watch_id_must_not_be_empty">Watch ID must not be empty</string>
    <string name="getting_started">GETTING STARTED</string>
    <string name="getting_started_text">Before we got started please ensure the watch\nis charged and lay it flat next to your phone.\nNow we need to register your Calendar Watch…</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_address">Enter your email address:</string>
    <string name="hint_enter_watch_id">Leave it empty for auto-pairing</string>
    <string name="hint_password">Password:</string>
    <string name="hint_watch_id">CALENDAR WATCH ID</string>
    <string name="info_app_version">app version</string>
    <string name="info_faq">FAQs</string>
    <string name="info_faq_url">http://www.whatwatch.com/faq/</string>
    <string name="info_help">Help</string>
    <string name="info_help_url">http://www.whatwatch.com/support/</string>
    <string name="info_privacy">Privacy policy</string>
    <string name="info_privacy_url">http://www.whatwatch.com/files/whatwatch_privacy_policy.pdf</string>
    <string name="info_terms">Terms &amp; Conditions</string>
    <string name="info_terms_url">http://www.whatwatch.com/files/whatwatch_terms_and_conditions.pdf</string>
    <string name="info_welcome">welcome screens</string>
    <string name="info_what_watch_com">What?Watch.com</string>
    <string name="info_what_watch_com_url">http://www.whatwatch.com/</string>
    <string name="internet_connection_alert">An internet connection is needed.</string>
    <string name="mac_address">MAC Address:</string>
    <string name="menu_link_watch">Link a watch</string>
    <string name="menu_watch_settings">Watch settings</string>
    <string name="next">NEXT</string>
    <string name="no">NO</string>
    <string name="ok">OK!</string>
    <string name="pair_your_watch">PAIR YOUR WATCH</string>
    <string name="permission_hint">Permission denied</string>
    <string name="picker_hour">Hour\nHAND</string>
    <string name="picker_minute">Min\nHAND</string>
    <string name="picker_minuteA">MinA\nHAND</string>
    <string name="picker_second">Second\nHAND</string>
    <string name="picker_secondA">SecondA\nHAND</string>
    <string name="registration_success_url">callbacksuccess</string>
    <string name="registration_url">https://www.whatwatch.com/appregistration/</string>
    <string name="select_mode">Select mode</string>
    <string name="set_time_button_hint">Enter time on the watch</string>
    <string name="successful">Successful!</string>
    <string name="successful_calibrated_text">Now you are able to display your\ncalendars on your watch!</string>
    <string name="successful_hint">Now you are able to display your calendars on your watch</string>
    <string name="successful_text">Now we need to calibrate the hand position of your watch</string>
    <string name="synced_calendars_hint">Synced calendars</string>
    <string name="title_activity_cal_dav_auth">CALDAV AUTHORIZATION</string>
    <string name="title_activity_calendars">MY CALENDARS</string>
    <string name="title_activity_google_auth">GOOGLE AUTHORIZATION</string>
    <string name="title_activity_info">INFORMATION</string>
    <string name="title_activity_watch_settings">MY WATCH</string>
    <string name="toast_msg_reset_watch">The pattern reset</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="watch_charging_text">Charging</string>
    <string name="watch_settings_button_airplane_mode">Air plane mode</string>
    <string name="watch_settings_button_allday_events">All day events</string>
    <string name="watch_settings_button_calendars">Select calendars</string>
    <string name="watch_settings_button_calibrate_watch">Calibrate hands</string>
    <string name="watch_settings_button_clear_alerts">Clear alerts</string>
    <string name="watch_settings_button_clear_patterns">Clear patterns</string>
    <string name="watch_settings_button_clear_patterns_and_alerts">Clear patterns and alerts</string>
    <string name="watch_settings_button_forget">Unpair</string>
    <string name="watch_settings_button_manual_sync">Manual sync</string>
    <string name="watch_settings_button_mode_fixed_desc">Displays a definable 12 hour period. Set time here</string>
    <string name="watch_settings_button_mode_fixed_title">FIXED MODE</string>
    <string name="watch_settings_button_mode_flexible_desc">Dynamically displays the next 12 hour period</string>
    <string name="watch_settings_button_mode_flexible_title">FLEXIBLE MODE</string>
    <string name="watch_settings_button_reset_watch">Reset</string>
    <string name="watch_settings_button_set_time">Calibrate</string>
    <string name="watch_settings_button_update">Watch Firmware update</string>
    <string name="watch_settings_button_vibrate_alert">Vibrate alert</string>
    <string name="welcome">WELCOME!</string>
    <string name="welcome_terms">By pairing the watch and continuous use of this application you acknowledge that you have read the Terms &amp; Conditions and Privacy Policy, understand them, and agree to be bound by them.</string>
    <string name="welcome_text">Thank you for buying our Calendar Watch!\nThe next few steps will guide you through the\nset up process for your new Calendar Watch.</string>
    <string name="yes">YES</string>
    <string name="about_title">About</string>
    <string name="about_app_name" translatable="false">What? Calendar App</string>
    <string name="about_version" translatable="false">Version %1$s (%2$s)</string>
    <string name="about_app_publisher" translatable="false">App Publisher Apollo29</string>
    <string name="about_app_publisher_name" translatable="false">Apollo29</string>
    <string name="app_info">This app is not related to What Watch AG. The original app is no longer available on the Android Play Store and this is a replacement based on the original app. The author of this app takes no responsibility for the use of this app with your Calendar Watch by What? or What Watch AG.</string>
    <string name="swiss_made_text" translatable="false">SWISS MADE</string>
</resources>