<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/welcome_window_size"
    android:background="@color/fragment_background">

    <TextView
        android:id="@+id/tv_welcome_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/welcome_text" />

    <RelativeLayout
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_button_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_selector"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ok" />
    </RelativeLayout>
</RelativeLayout>
