<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/welcome_screen_background">

            <RelativeLayout
                android:id="@+id/logo_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:translationY="200dp">

                <ImageView
                    android:id="@+id/image_logo"
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/text_logo"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-20dp"
                    android:src="@drawable/product_name" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragment_starting_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/fragment_starting_top_margin">

            <View
                android:id="@+id/shadow_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_shadow_size"
                android:background="@drawable/fragment_shadow" />

            <com.whatcalendar.view.LockedViewPager
                android:id="@+id/starting_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/shadow_divider" />

            <RelativeLayout
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_button_size"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_selector"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/next_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/next"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/pair_watch_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0"
                    android:text="@string/pair_your_watch"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/try_again_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0"
                    android:text="@string/try_again"
                    android:visibility="invisible" />

                <ProgressBar
                    android:id="@+id/progress_pair_watch"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fragment_welcome_window_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/welcome_window_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:alpha="0"
            android:orientation="vertical"
            android:translationY="@dimen/welcome_window_size">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_shadow_size"
                android:background="@drawable/fragment_shadow" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/fragment_guide_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="#fff"
            android:visibility="invisible">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/welcome_viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/image_x_sign"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:padding="6dp"
                android:src="@drawable/ic_x_button" />

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                ci_drawable="@drawable/indicator_radius"
                ci_drawable_unselected="@drawable/indicator_radius"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </RelativeLayout>
</layout>